--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,14 @@
 @media (max-width: 1200px) {
-  /* tablet devices */ }
+  /* tablet devices */ 
+  .section-header .logo, .header-main .logo {
+    max-height:200px;
+    width: 150px; }
+  .section-header .logo-text, .header-main .logo-text {
+    font-size: 24px; }
+  .section-header .brand-wrap, .section-header .search-wrap, .section-header .widget-header, .header-main .brand-wrap, .header-main .search-wrap, .header-main .widget-header {
+    margin-bottom: 1rem; } 
+
+}
 @media (max-width: 992px) {
   /* small tablet devices */
   .slider-main .item-slide {
@@ -31,8 +40,8 @@
     margin-top: 5px; }
 
   .section-header .logo, .header-main .logo {
-    max-height: 30px;
-    width: auto; }
+    max-height:200px;
+    width: 150px; }
   .section-header .logo-text, .header-main .logo-text {
     font-size: 24px; }
   .section-header .brand-wrap, .section-header .search-wrap, .section-header .widget-header, .header-main .brand-wrap, .header-main .search-wrap, .header-main .widget-header {
